--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.cdnfonts.com/css/dungeon-depths" rel="stylesheet"/>
 <link href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css" rel="stylesheet"/>
 
-<link href="Index.css" rel="stylesheet"/></head>
+<link href="index.css" rel="stylesheet"/></head>
 <body>
 <div class="cursor-dot"></div>
 <div class="cursor-follower"></div>
@@ -220,5 +220,5 @@
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script><script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script><script defer="True" src="Index.js"></script></body>
+<script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script><script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script><script defer="True" src="index.js"></script></body>
 </html>
