--- a/changelog.html
+++ b/changelog.html
@@ -51,7 +51,7 @@
     </div>
     <div class="side-menu-content">
      <div class="setting-section menu-nav-links">
-      <a data-i18n-key="navHome" href="https://samaryt567.github.io/Test/index">
+      <a data-i18n-key="navHome" href="https://samaryt567.github.io/Test/">
        Home
       </a>
       <a data-i18n-key="navAbout" href="https://samaryt567.github.io/Test/about">
@@ -592,4 +592,5 @@
   </script>
  </body>
 </html>
+
 
