--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
     </div>
     <div class="side-menu-content">
      <div class="setting-section menu-nav-links">
-      <a data-i18n-key="navAbout" href="https://samaryt567.github.io/Test/About.html">
+      <a data-i18n-key="navAbout" href="https://samaryt567.github.io/Test/about">
        About
       </a>
-      <a data-i18n-key="navRecentVideos" href="https://samaryt567.github.io/Test/RecentVideos.html">
+      <a data-i18n-key="navRecentVideos" href="https://samaryt567.github.io/Test/recentvideos">
        Recent Videos
       </a>
-      <a data-i18n-key="navChangelog" href="https://samaryt567.github.io/Test/Changelog.html">
+      <a data-i18n-key="navChangelog" href="https://samaryt567.github.io/Test/changelog">
        Changelog
       </a>
      </div>
